welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: identifier expected but '(' found.
	var x = tab.(progres)
                    ^golomb:10: error: identifier expected but '(' found.
		var x = tab.(progres)
                            ^golomb:15: error: identifier expected but '(' found.
		return tab.(progres + 1)
                           ^