welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var tab = new Array[Int](num)
	var progres = 1
	var x = tab.(progres)
	tab(0) = 1
	if(num == 1){
		return 1
	}
	for(i <- 0 to num - 1){
		var x = tab.(progres)
		tab(i) = progres + 1
		x = x-1
		if(x=0){ progres = progres +1}
		}
		return tab.(progres + 1)
}
